# fixfifa

./: .editorconfig  .gitignore  CHANGELOG-template.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs
assets/: logo.xcf
ci/: before_deploy.ps1  install.sh  script.sh
config/: log4rs.yaml
docs/: globals.example.json
docs/examples/Data/: locale.ini
docs/examples/FIFASetup/: config.ini
fixfifa_common/: Cargo.toml
fixfifa_common/src/: cors.rs  lib.rs  settings.rs
fixfifa_lib/: Cargo.toml
fixfifa_lib/src/: fifa19.rs  lib.rs  pattern.rs  process.rs  state.rs
fixfifa_lib/src/state/events/: group_attribute.rs  mod.rs
fixfifa_lib/src/state/objects/: club.rs  player.rs
fixfifa_ui/: .gitignore  Cargo.toml  Rocket.toml  build.toml  index.js  package-lock.json  package.json  webpack.config.js
fixfifa_ui/assets/examples/Data/: locale.ini
fixfifa_ui/assets/examples/FIFASetup/: config.ini
fixfifa_ui/assets/styles/: app.scss
fixfifa_ui/src/: lib.rs  tests.rs
fixfifa_ui/templates/: base.html.tera
src/: injector.rs  main.rs
templates/: base.html.tera  index.html.tera
