[package]
name = "fixfifa"
version = "0.1.0"
authors = ["Alexander Matte <alexmatte1989@gmail.com>", "Fabio Tea <iam@f4b.io>"]
edition = "2018"
license = "./LICENSE"
readme = "README.md"
repository = "https://github.com/f4bio/fixfifa"
documentation = "https://github.com/f4bio/fixfifa"
homepage = "https://crates.io/crates/rand"
description = """
Random number generators and other randomness functionality.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
exclude = ["/utils/*", "/.travis.yml", "/appveyor.yml", ".gitignore"]
autobenches = true

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[workspace]
members = [
  "fixfifa_lib",
  "fixfifa_ui",
  "fixfifa_common",
]

[dependencies]
fixfifa_lib = { path = "fixfifa_lib", version = "0.1.0" }
fixfifa_ui = { path = "fixfifa_ui", version = "0.1.0" }
fixfifa_common = { path = "fixfifa_common", version = "0.1.0" }
log = "0.4.6"
log4rs = "0.8.3"
include_dir = "0.2.1"
sysinfo = "0.8.5"
flame = "0.2.2"
flamer = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["commctrl", "consoleapi", "std", "memoryapi", "psapi", "wow64apiset", "wincon", "winuser", "windef", "winnt"] }

[build-dependencies]
autocfg = "0.1"

[[bin]]
name = "fixfifa"
path = "src/main.rs"

#[[bench]]
#name = "distributions"
#path = "benches/distributions.rs"
#required-features = ["small_rng"]
#
#[[bench]]
#name = "generators"
#path = "benches/generators.rs"
#required-features = ["small_rng"]
#
#[[bench]]
#name = "misc"
#path = "benches/misc.rs"
#required-features = ["small_rng"]
#
#[[bench]]
#name = "seq"
#path = "benches/seq.rs"
#required-features = ["small_rng"]
