[package]
name = "fixfifa_common"
version = "0.1.0"
authors = ["The Rand Project Developers", "The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://rust-random.github.io/rand/rand_core/"
homepage = "https://crates.io/crates/rand_core"
description = """
Core random number generator traits and tools for implementation.
"""
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[dependencies]
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
pickledb = "0.4.0"
sled = "0.24.1"
rust-ini = "0.13.0"
rocket = "0.4.1"
sysinfo = "0.9.0"
winapi = { version = "0.3.7", features = ["std", "winuser", "winnt"] }
