[package]
name = "fixfifa_lib"
version = "0.1.0"
authors = ["Alexander Matte <alexmatte1989@gmail.com>", "Fabio Tea <iam@f4b.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/rand"
documentation = "https://rust-random.github.io/rand/rand_chacha/"
homepage = "https://crates.io/crates/rand_chacha"
description = """
ChaCha random number generator
"""
keywords = ["random", "rng", "chacha"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-random/rand" }
appveyor = { repository = "rust-random/rand" }

[dependencies]
log = "0.4.1"
log4rs = "0.8.3"
tempfile = "3.0.7"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
reqwest = "0.9.15"
pickledb = "0.3.0"
lazy_static = "1.3.0"
regex = "1.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["commctrl", "consoleapi", "std", "memoryapi", "psapi", "wow64apiset", "wincon", "winuser", "windef", "winnt"] }

[lib]
name = "fixfifa"
path = "src/lib.rs"
crate_type = [ "cdylib" ]
